@@ -37,6 +37,9 @@ option_list <- list(
     make_option(c("--alpha"), action="store", type="double", 
         default=formals(PureCN::segmentationCBS)$alpha,
         help="Segmentation: significance of breakpoints [default %default]"),
+    make_option(c("--maxsegments"), action="store", type="double", 
+        default=formals(PureCN::runAbsoluteCN)$max.segments,
+        help="Segmentation: Flag noisy samples with many segments [default %default]"),
     make_option(c("--targetweightfile"), action="store", type="character", default=NULL,
         help="Segmentation: Weights of targets. Generated by NormalDB.R."),
     make_option(c("--minpurity"), action="store", type="double", 
@@ -56,6 +59,9 @@ option_list <- list(
     make_option(c("--model"), action="store", type="character", 
         default=formals(PureCN::runAbsoluteCN)$model[[2]],
         help="Model used to fit variants. Either beta or betabin [default %default]."),
+    make_option(c("--logratiocalibration"), action="store", type="double", 
+        default=formals(PureCN::runAbsoluteCN)$log.ratio.calibration,
+        help="Parameter defining the extend to which log-ratios might be miscalibrated [default %default]."),
     make_option(c("--outvcf"), action="store_true", default=FALSE,
         help="Output: Annotate input VCF with posterior probabilities. Otherwise produce CSV file."),
     make_option(c("--out"), action="store", type="character", default=NULL,
@@ -170,7 +176,7 @@ if (file.exists(file.rds) && !opt$force) {
         }
     } 
         
-    # flog.threshold("DEBUG")
+    if (Sys.getenv("PURECN_DEBUG") != "") flog.threshold("DEBUG")
         
     ret <- runAbsoluteCN(normal.coverage.file=normal.coverage.file, 
             tumor.coverage.file=tumor.coverage.file, vcf.file=opt$vcf,
@@ -187,6 +193,8 @@ if (file.exists(file.rds) && !opt$force) {
             normalDB=normalDB, model.homozygous=opt$modelhomozygous,
             min.ploidy=opt$minploidy, max.ploidy=opt$maxploidy, 
             model=opt[["model"]], log.file=file.log, 
+            max.segments=opt$maxsegments, 
+            log.ratio.calibration=opt$logratiocalibration,
             post.optimize=opt$postoptimize)
     dev.off()
     saveRDS(ret, file=file.rds)
