@@ -21,6 +21,8 @@ API CHANGES
 - Changed defaults: 
     - min.normals 2 (from 4) in setMappingBiasVcf
     - normalDB.min.coverage 0.25 (from 0.2) in filterTargets
+    - log.ratio.calibration 0.1 (from 0.25) in runAbsoluteCN; now 
+      relative to purity, not log-ratio noise
 - Minor changes: 
     - Removed gc.data from filterTargets since gc_bias is now added to tumor 
       coverage
